--- a/.github/workflows/enc_dec_tests.yml
+++ b/.github/workflows/enc_dec_tests.yml
@@ -11,6 +11,11 @@ jobs:
 
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build
+    
+    - name: Download Eigen3 and Install
+      run: git clone https://gitlab.com/libeigen/eigen.git |
+        cd eigen | git checkout 3.4 | cmake -B build | cd build |
+        sudo make install
 
     - name: Build
       # Build your program with the given configuration
