--- a/.github/workflows/enc_dec_tests.yml
+++ b/.github/workflows/enc_dec_tests.yml
@@ -10,8 +10,13 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Download Eigen3 and Install
-      run: git clone https://gitlab.com/libeigen/eigen.git &&
+      run: git clone https://gitlab.com/libeigen/eigen.git &&https://github.com/wbhart/flint2.git
         cd eigen && pwd && git checkout 3.4 && cmake -B build && cd build &&
+        sudo make install
+        
+    - name: Download FilntLib and Install
+      run: git clone https://github.com/wbhart/flint2.git && 
+        cd flint2 && pwd && git checkout flint-2.8 && cmake -B build && cd build &&
         sudo make install
 
     - name: Configure CMake
