Encryptor & Decryptor implementation (#3)
Encryption & Decryption implementation

Signed-off-by: Andru Stefanescu <als209@cam.ac.uk>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,9 @@ project(smkhe)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(SOURCE_FILES src/encoder.cpp src/plaintext.cpp src/parameters.cpp)
-set(TEST_FILES test/encoder.cpp)
+set(SOURCE_FILES src/encoder.cpp src/plaintext.cpp src/parameters.cpp src/public_key.cpp src/secret_key.cpp
+                 src/encryptor.cpp src/math/ntt_transformer.cpp src/util.cpp src/keygen.cpp src/rand_util.cpp src/ciphertext.cpp)
+set(TEST_FILES test/encoder.cpp test/math/ntt_transformer.cpp test/encryptor.cpp)
 
 add_library(smkhe SHARED ${SOURCE_FILES})
 
