Add protoc installation step for Github Actions
Signed-off-by: Andru Stefanescu <als209@cam.ac.uk>

--- a/.github/workflows/enc_dec_tests.yml
+++ b/.github/workflows/enc_dec_tests.yml
@@ -9,6 +9,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Setup protoc
+      uses: arduino/setup-protoc@v1.1.2
+
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build
 
