--- a/.github/workflows/enc_dec_tests.yml
+++ b/.github/workflows/enc_dec_tests.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Setup protoc
-      run: apt install -y protobuf-compiler
+      run: sudo apt install -y protobuf-compiler
 
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build
