--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(SOURCE_FILES src/encoder.cpp src/plaintext.cpp src/parameters.cpp src/public
                  src/math/rns_transformer.cpp src/evaluation_key.cpp src/evaluator.cpp src/math/rns_converter.cpp
                  build/lib/BigInt.cpp src/serializer_util.cpp
                  src/mk_keygen.cpp src/mk_evaluator.cpp src/mk_public_key.cpp src/mk_ciphertext.cpp src/mk_evaluation_key.cpp src/mk_decryptor.cpp src/partial_ciphertext.cpp)
-set(TEST_FILES test/encoder.cpp test/math/ntt_transformer.cpp test/encryptor.cpp test/evaluator.cpp test/serializer.cpp)
+set(TEST_FILES test/encoder.cpp test/math/ntt_transformer.cpp test/encryptor.cpp test/evaluator.cpp test/serializer.cpp test/mk_evaluator.cpp)
 
 FILE(DOWNLOAD https://github.com/faheel/BigInt/releases/download/v0.5.0-dev/BigInt.hpp build/lib/BigInt.cpp)
 
