Fix phone CMakeLists & Add built libs
Signed-off-by: Andru Stefanescu <als209@cam.ac.uk>

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -7,7 +7,7 @@ set(SOURCE_FILES ../src/encoder.cpp ../src/plaintext.cpp ../src/parameters.cpp .
         ../src/encryptor.cpp ../src/math/ntt_transformer.cpp ../src/util.cpp ../src/keygen.cpp ../src/rand_util.cpp ../src/ciphertext.cpp
         ../src/math/rns_transformer.cpp ../src/evaluation_key.cpp ../src/evaluator.cpp ../src/math/rns_converter.cpp
         ../build/lib/BigInt.cpp ../src/serializer_util.cpp
-        ../src/mk_keygen.cpp ../src/mk_evaluator.cpp ../src/mk_public_key.cpp ../src/mk_ciphertext.cpp ../src/mk_evaluation_key.cpp ../src/mk_decryptor.cpp src/partial_ciphertext.cpp)
+        ../src/mk_keygen.cpp ../src/mk_evaluator.cpp ../src/mk_public_key.cpp ../src/mk_ciphertext.cpp ../src/mk_evaluation_key.cpp ../src/mk_decryptor.cpp ../src/partial_ciphertext.cpp)
 set(TEST_FILES ../test/encoder.cpp ../test/math/ntt_transformer.cpp ../test/encryptor.cpp ../test/evaluator.cpp ../test/serializer.cpp)
 
 FILE(DOWNLOAD https://github.com/faheel/BigInt/releases/download/v0.5.0-dev/BigInt.hpp ../build/lib/BigInt.cpp)
