--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.10)
 project(smkhe)
 
 set(CMAKE_CXX_STANDARD 17)
+set(PROTOBUF_INCLUDE_DIR /usr/local/include)
+set(PROTOBUF_LIB /Users/andru/Desktop/libprotobuf-android-3.a)
 
 set(SOURCE_FILES ../src/encoder.cpp ../src/plaintext.cpp ../src/parameters.cpp ../src/public_key.cpp ../src/secret_key.cpp
         ../src/encryptor.cpp ../src/math/ntt_transformer.cpp ../src/util.cpp ../src/keygen.cpp ../src/rand_util.cpp ../src/ciphertext.cpp
@@ -12,22 +14,10 @@ set(TEST_FILES ../test/encoder.cpp ../test/math/ntt_transformer.cpp ../test/encr
 
 FILE(DOWNLOAD https://github.com/faheel/BigInt/releases/download/v0.5.0-dev/BigInt.hpp ../build/lib/BigInt.cpp)
 
-include(FetchContent)
-
-FetchContent_Declare(
-        protobuf
-        GIT_REPOSITORY https://github.com/protocolbuffers/protobuf.git
-        GIT_TAG        v3.19.4
-        SOURCE_SUBDIR  cmake
-)
-
-set(protobuf_BUILD_TESTS OFF)
-FetchContent_MakeAvailable(protobuf)
-
 add_library(protobuf_local STATIC IMPORTED)
-set_target_properties(protobuf_local PROPERTIES IMPORTED_LOCATION /Users/andru/Desktop/libprotobuf.a)
+set_target_properties(protobuf_local PROPERTIES IMPORTED_LOCATION ${PROTOBUF_LIB})
 
 add_library(smkhe STATIC ${SOURCE_FILES} ../build/messages.pb.cc ../build/messages.pb.h)
 
 target_link_libraries(smkhe PUBLIC protobuf_local)
-target_include_directories(smkhe PUBLIC ../include ../lib ${protobuf_SOURCE_DIR}/src)
+target_include_directories(smkhe PUBLIC ../include ../lib ${PROTOBUF_INCLUDE_DIR})
